kong/untitled-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdeploy
spec:
  replicas: 2 
  selector:
    matchLabels:
      name: nginxdeploy
  template:
    metadata:
      labels:
        name: nginxdeploy
    spec:
      hostname: dep    
      subdomain: hello-dep
      containers:
      - name: nginxdeploy
        image: nginx:alpine
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-dep
  labels:
    app: hello-dep
spec:
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
      name: client
  selector:
    app: nginxdeploy
